--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 authors = ["Ian Kettlewell"]
 edition = "2018"
 
+[features]
+default = ["opengl_glow"]
+opengl_glow = ["glow"]
+
 [dependencies]
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
-
-[dev-dependencies]
-gl = {version = "0.14.0"}
+glow = {version = "0.4.0", optional = true}
