Prevent default for key events on WASM

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,6 @@ features = [
     "HtmlElement",
     "HtmlCanvasElement",
     "MouseEvent",
-    "KeyboardEvent"
+    "KeyboardEvent",
+    "Event",
 ]
