--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,13 @@ features = [
     "KeyboardEvent",
     "Event",
 ]
+
+[[example]]
+name = "no_gl"
+default-features = false
+features = []
+
+[[example]]
+name = "hello"
+required-features = ["opengl_glow"]
+path = "examples/hello.rs"
