--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ opengl_glow = ["glow"]
 [dependencies]
 glow = {version = "0.4.0", optional = true}
 
+[target.'cfg(target_os="macos")'.dependencies]
+cocoa = "0.20.0"
+core-foundation = "0.7"
+objc = "0.2.7"
+
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
