--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,8 @@ opengl_glow = ["glow"]
 glow = {version = "0.4.0", optional = true}
 
 [target.'cfg(target_os="macos")'.dependencies]
-cocoa = "0.20.0"
-core-foundation = "0.7"
 objc = "0.2.7"
-
+libc = "0.2.67"
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
