--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ glow = {version = "0.4.0", optional = true}
 
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
-libc = "0.2.67"
+libc = { version = ">= 0.1, < 0.3", default-features = false }
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
