WebGL1 context creation works again, removed GL from main Kettlewin crate, instead it's just a reexport

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [features]
 gl_context = ["kettlewin_gl_context"]
-default = []
+default = ["gl_context"]
 
 [dependencies]
 kettlewin_gl_context = { path = "./gl_context", optional = true }
