Fix a few clippy warnings, swap back to regular objc crate instead of fork. Add libc dependency to tree. (Increases build time by 1.5-ish seconds

--- a/platforms/macos/Cargo.toml
+++ b/platforms/macos/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 kettlewin_platform_common = { path = "../../platform_common" }
-objc = { git = "https://github.com/kettle11/rust-objc" }
+objc = "0.2.7"
