--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 kettlewin_platform_common = { path = "../platform_common" }
 
 [target.'cfg(target_os="macos")'.dependencies]
-objc = { git = "https://github.com/kettle11/rust-objc" }
+objc = "0.2.7"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.58"
