--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ glow = {version = "0.4.0"}
 [target.'cfg(target_os="macos")'.dependencies]
 kettlewin_platform_macos = { path = "./platforms/macos" }
 
+[target.'cfg(target_os="windows")'.dependencies]
+kettlewin_platform_windows = { path = "./platforms/windows" }
+
 [target.'cfg(target_arch="wasm32")'.dependencies]
 kettlewin_platform_web = { path = "./platforms/web" }
 
