Windows almost works (vsync and multiple windows don't work yet)

--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -10,6 +10,9 @@ kettlewin_platform_common = { path = "../platform_common" }
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
 
+[target.'cfg(target_os="windows")'.dependencies]
+winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
+
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.58"
 
