--- a/platform_common/Cargo.toml
+++ b/platform_common/Cargo.toml
@@ -3,3 +3,6 @@ name = "kettlewin_platform_common"
 version = "0.1.0"
 authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
 edition = "2018"
+
+[dependencies]
+raw-window-handle = "0.3.3"
