--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 kettlewin_platform_common = { path = "../platform_common" }
+raw-window-handle = "0.3.3"
 
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
