--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
-name = "kettlewin"
+name = "kapp"
 version = "0.1.0"
 authors = ["Ian Kettlewell"]
 edition = "2018"
 
 [features]
-gl_context = ["kettlewin_gl_context"]
+gl_context = ["kapp_gl_context"]
 default = ["gl_context"]
 
 [dependencies]
-kettlewin_gl_context = { path = "./gl_context", optional = true }
+kapp_gl_context = { path = "./gl_context", optional = true }
 
 [dev-dependencies]
 glow = {version = "0.4.0"}
 
 [target.'cfg(target_os="macos")'.dependencies]
-kettlewin_platform_macos = { path = "./platforms/macos" }
+kapp_platform_macos = { path = "./platforms/macos" }
 
 [target.'cfg(target_os="windows")'.dependencies]
-kettlewin_platform_windows = { path = "./platforms/windows" }
+kapp_platform_windows = { path = "./platforms/windows" }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-kettlewin_platform_web = { path = "./platforms/web" }
+kapp_platform_web = { path = "./platforms/web" }
 
