--- a/examples/no_gl/Cargo.toml
+++ b/examples/no_gl/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-kettlewin = {path = "../../", default-features = false}
+kapp = {path = "../../", default-features = false}
