--- a/platform_common/Cargo.toml
+++ b/platform_common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kettlewin_platform_common"
+name = "kapp_platform_common"
 version = "0.1.0"
 authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
 edition = "2018"
