--- a/platforms/macos/Cargo.toml
+++ b/platforms/macos/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "kettlewin_platform_macos"
+name = "kapp_platform_macos"
 version = "0.1.0"
 authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-kettlewin_platform_common = { path = "../../platform_common" }
+kapp_platform_common = { path = "../../platform_common" }
 objc = "0.2.7"
