--- a/platforms/web/Cargo.toml
+++ b/platforms/web/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 kapp_platform_common = { path = "../../platform_common" }
-wasm-bindgen = "0.2.58"
+wasm-bindgen = "0.2.64"
+console_error_panic_hook = "0.1.6"
 
 [dependencies.web-sys]
 version = "0.3.35"
