Added scroll and pinch event to web

--- a/platforms/web/Cargo.toml
+++ b/platforms/web/Cargo.toml
@@ -18,6 +18,7 @@ features = [
     "HtmlCanvasElement",
     "MouseEvent",
     "KeyboardEvent",
+    "WheelEvent",
     "Event",
     "WebGlContextAttributes",
     "Window"
