--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 kapp_platform_common = { path = "../platform_common" }
 raw-window-handle = "0.3.3"
 
+[dev-dependencies]
+glow = {version = "0.4.0"}
+kapp = {path = "../"}
+
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
 
