Rework of mouse down and pointer events. (Breaks Windows build)

--- a/platforms/web/Cargo.toml
+++ b/platforms/web/Cargo.toml
@@ -17,6 +17,7 @@ features = [
     "HtmlElement",
     "HtmlCanvasElement",
     "MouseEvent",
+    "PointerEvent",
     "KeyboardEvent",
     "WheelEvent",
     "Event",
