--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -19,14 +19,16 @@ objc = "0.2.7"
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-wasm-bindgen = "0.2.58"
+wasm-bindgen = "0.2.*"
 
 [target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
-version = "0.3.35"
+version = "0.3.*"
 features = [
     "Document",
     "HtmlElement",
     "HtmlCanvasElement",
     "WebGlContextAttributes",
+    "WebGlRenderingContext",
+    "WebGl2RenderingContext",
     "Window"
 ]
