--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -15,6 +15,9 @@ kapp = {path = "../"}
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
 
+[target.'cfg(target_os="ios")'.dependencies]
+objc = "0.2.7"
+
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
