--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -14,6 +14,9 @@ kapp_platform_common = { path = "../kapp_platform_common" }
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
 
+[target.'cfg(target_os="ios")'.dependencies]
+objc = "0.2.7"
+
 [target.'cfg(target_os="windows")'.dependencies]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
