--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "kapp"
 version = "0.1.0"
 authors = ["Ian Kettlewell"]
 edition = "2018"
+license = "zlib"
 
 [features]
 gl_context = ["kapp_gl_context"]
