--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -3,6 +3,7 @@ name = "kapp_gl_context"
 version = "0.1.0"
 authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
 edition = "2018"
+license = "zlib"
 
 [dependencies]
 kapp_platform_common = { path = "../kapp_platform_common" }
