--- a/kapp_platform_common/Cargo.toml
+++ b/kapp_platform_common/Cargo.toml
@@ -3,6 +3,7 @@ name = "kapp_platform_common"
 version = "0.1.0"
 authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
 edition = "2018"
+license = "zlib"
 
 [dependencies]
 raw-window-handle = "0.3.3"
