--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -21,7 +21,7 @@ objc = "0.2.7"
 [target.'cfg(target_os="windows")'.dependencies]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-wasm-bindgen = "0.2.64"
+wasm-bindgen = "0.2.*"
 console_error_panic_hook = "0.1.6"
 
 [target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
