Disable high DPI support on Mac for now (needs a setting for later)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ default = ["gl_context"]
 [dependencies]
 kapp_gl_context = { path = "./gl_context", optional = true }
 kapp_platforms = { path = "./kapp_platforms" }
+#web-sys = "0.3.45"
