--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -25,7 +25,7 @@ wasm-bindgen = "0.2.*"
 console_error_panic_hook = "0.1.6"
 
 [target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
-version = "0.3.35"
+version = "0.3.*"
 features = [
     "console",
     "Document",
