--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -23,3 +23,4 @@ objc = "0.2.7"
 winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
+kwasm = {path = "../../kwasm"}
