--- a/gl_context/Cargo.toml
+++ b/gl_context/Cargo.toml
@@ -20,7 +20,7 @@ objc = "0.2.7"
 objc = "0.2.7"
 
 [target.'cfg(target_os="windows")'.dependencies]
-winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "windowsx"] }
+lawrencium = "1"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.*"
