Add necessary features to web-sys dep

--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -37,6 +37,8 @@ features = [
     "WheelEvent",
     "Event",
     "WebGlContextAttributes",
-    "Window"
+    "Window",
+    "Element",
+    "CssStyleDeclaration"
 ]
 
