--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -11,6 +11,7 @@ license = "zlib"
 [dependencies]
 raw-window-handle = "0.3.3"
 kapp_platform_common = { path = "../kapp_platform_common" }
+klog = {path = "../../klog"}
 
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
