--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -11,6 +11,11 @@ license = "zlib"
 [dependencies]
 raw-window-handle = "0.3.3"
 kapp_platform_common = { path = "../kapp_platform_common" }
+fermium = {version = "20014.2.0", optional = true}
+
+[features]
+default = []
+SDL = ["fermium"]
 
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
@@ -41,4 +46,5 @@ features = [
     "Element",
     "CssStyleDeclaration"
 ]
+
 
