--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "kapp"
 version = "0.1.0"
 authors = ["Ian Kettlewell"]
 edition = "2018"
-license = "zlib"
+license = "Zlib OR Apache-2.0 OR MIT"
 
 [features]
 gl_context = ["kapp_gl_context"]
@@ -12,4 +12,3 @@ default = ["gl_context"]
 [dependencies]
 kapp_gl_context = { path = "./gl_context", optional = true }
 kapp_platforms = { path = "./kapp_platforms" }
-#web-sys = "0.3.45"
