--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -22,4 +22,4 @@ objc = "0.2.7"
 [target.'cfg(target_os="windows")'.dependencies]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-
+kwasm = {path = "../../kwasm", features=["wasm_bindgen_support"]}
