--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 license = "Zlib OR Apache-2.0 OR MIT"
 
 [features]
+default = ["gl_context", "wasm_bindgen_support"]
 gl_context = ["kapp_gl_context"]
-default = ["gl_context"]
 SDL = ["kapp_platforms/SDL"]
+wasm_bindgen_support = ["kapp_platforms/wasm_bindgen_support"]
 
 [dependencies]
 kapp_gl_context = { path = "./gl_context", optional = true }
