--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -15,6 +15,7 @@ fermium = {version = "20014.2.0", optional = true}
 [features]
 default = []
 SDL = ["fermium"]
+wasm_bindgen_support = ["kwasm/wasm_bindgen_support"]
 
 [target.'cfg(target_os="macos")'.dependencies]
 objc = "0.2.7"
@@ -22,4 +23,4 @@ objc = "0.2.7"
 [target.'cfg(target_os="windows")'.dependencies]
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
-kwasm = {path = "../../kwasm", features=["wasm_bindgen_support"]}
+kwasm = {path = "../../kwasm"}
