--- a/kapp_platforms/Cargo.toml
+++ b/kapp_platforms/Cargo.toml
@@ -10,6 +10,7 @@ license = "Zlib OR Apache-2.0 OR MIT"
 [dependencies]
 raw-window-handle = "0.3.3"
 kapp_platform_common = { path = "../kapp_platform_common" }
+klog = {path = "../../klog"}
 fermium = {version = "20014.2.0", optional = true}
 
 [features]
